syntax = "proto3";

import "github.com/apoydence/loggrebutterfly/api/loggregator/v2/envelope.proto";

package loggrebutterfly;

service Analyst{
  rpc Query(QueryInfo) returns (QueryResponse) {}
  rpc Aggregate(AggregateInfo) returns (AggregateResponse) {}
}

message QueryInfo {
  AnalystFilter filter = 1;
}

message AggregateInfo {
  QueryInfo query = 1;
  int64 bucket_width_ns = 2;
}

message QueryResponse {
  repeated loggregator.v2.Envelope envelopes = 1;
}

message AggregateResponse {
  map<int64, double> results = 1;
}

message AnalystFilter {
  string source_id = 1;
  TimeRange time_range = 2;

  oneof Envelopes {
    CounterFilter counter = 3;
  }
}

// [start, end)
message TimeRange {
  int64 start = 1;
  int64 end = 2;
}

message CounterFilter {
  string name = 1;
}
